style(nav): try to fix logo bug on iphones
This commit adds max width and height to the cheese pets logo  to see if this resolves a weird bug on iphones  where the image is stretched - can't replicate on desktop.

--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -30,8 +30,10 @@ nav {
 }
 
 .nav__logo img {
-  max-width: 100%;
+  max-width: 20rem;
+  max-height: 4rem;
   margin-top: 0.5rem;
+  object-fit: contain;
 
   @media only screen and (min-width: 400px) {
     max-width: 400px;
